Thu Sep 28 18:19:17 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Removed some debugging code which doesn't work with some versions
	  of libxml anyway.

Thu Sep 28 17:55:30 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* regexcommon.h now has a guard for includetest

	* OmIndexerData no longer has a name element.

	* Added regex split node, translate node, and flatten-to-string node

	* Comments in the XML file don't confuse the graph builder as much
	  (more wrapping needs to be done here.)

Thu Sep 28 15:52:03 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fixed a silly memory leak in QuartzDbEntries.

Wed Sep 27 19:30:34 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Almost added ability to add an empty document to a quartz database
	  (yay(!)).  Added test for this, too.

Wed Sep 27 19:04:10 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added a regex replace node.

Wed Sep 27 17:12:13 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed bug in timeout code

Wed Sep 27 13:26:47 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fixed bug in database.cc - only implicit sessions get implicitly
	  ended.

	* Implemented quartztest which opens a new database and adds an empty
	  document to it.

Wed Sep 27 11:52:09 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Compatibility tweak for older libxml

Tue Sep 26 18:17:38 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added dummy implementation of quartz tables, storing stuff in
	  files and reading it all into memory, pretending its in a tree
	  structure.

Tue Sep 26 18:17:11 BST 2000 Olly Betts

	* Removed superfluous MergePostList:: qualification.

Tue Sep 26 17:12:44 BST 2000 Olly Betts

	* OmTermListIterator: operator* now const; added get_wdf() and
	  get_termfreq() methods.

Tue Sep 26 13:30:42 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
